--- a/over_the_board.html
+++ b/over_the_board.html
@@ -149,6 +149,11 @@
             opacity: 0.85;
         }
 
+        /* ========== BLACK PIECE ROTATION ========== */
+        .square.black-piece {
+            transform: rotate(180deg);
+        }
+
         /* ========== PROMOTION MODAL STYLES ========== */
         .promotion-overlay {
             position: absolute;
@@ -329,6 +334,33 @@
             color: var(--text-dark);
         }
 
+
+
+        /* ========== COMPATIBILITY MODE BUTTON ========== */
+        .compat-button {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background: #3b82f6;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 600;
+            font-size: 14px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .compat-button:hover {
+            background: #2563eb;
+            transform: translateY(-2px);
+        }
+
         /* ========== OFFLINE BADGE STYLES ========== */
         .offline-badge {
             position: fixed;
@@ -379,12 +411,22 @@
                 padding: 8px 16px;
                 font-size: 12px;
             }
+            .compat-button {
+                top: 10px;
+                right: 10px;
+                padding: 8px 16px;
+                font-size: 12px;
+            }
         }
     </style>
 </head>
 <body>
     <!-- ========== BACK BUTTON ========== -->
     <a href="index.html" class="back-button">← Home</a>
+
+    <!-- ========== COMPATIBILITY MODE BUTTON ========== -->
+    <a href="over_the_board_kindle.html" class="compat-button">📱 Kindle Mode</a>
+
 
     <!-- ========== OFFLINE INDICATOR ========== -->
     <div class="offline-badge" id="offlineBadge">✓ Offline Ready</div>
@@ -522,6 +564,10 @@
 
                     if (piece) {
                         squareEl.textContent = pieces[piece.color + piece.type];
+                        // Rotate black pieces 180 degrees for realistic board feel
+                        if (piece.color === 'b') {
+                            squareEl.classList.add('black-piece');
+                        }
                     }
 
                     squareEl.addEventListener('click', () => handleSquareClick(square));
