--- a/over_the_board_kindle.html
+++ b/over_the_board_kindle.html
@@ -3,20 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#22c55e">
-    <title>Micro Chess | Kindle Compatible</title>
+    <title>Micro Chess | Kindle Mode</title>
     <style>
-        /* ========== ROOT VARIABLES ========== */
-        :root {
-            --primary: #22c55e;
-            --primary-dark: #16a34a;
-            --light-sq: #f0d9b5;
-            --dark-sq: #b58863;
-            --white: #ffffff;
-            --text-dark: #1a1a1a;
-            --text-light: #666666;
-        }
-
         * {
             margin: 0;
             padding: 0;
@@ -24,160 +12,129 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 12px;
+            font-family: Arial, sans-serif;
+            background: #22c55e;
+            padding: 10px;
+            text-align: center;
         }
 
         .back-button {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            padding: 10px 20px;
+            display: inline-block;
+            margin: 10px;
+            padding: 12px 24px;
             background: white;
             color: #22c55e;
             text-decoration: none;
-            border-radius: 8px;
-            font-weight: 600;
-            font-size: 14px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            transition: all 0.2s;
-            z-index: 1000;
-        }
-
-        .back-button:hover {
-            background: #22c55e;
-            color: white;
-            transform: translateX(-4px);
+            border-radius: 6px;
+            font-weight: bold;
+            font-size: 16px;
         }
 
         .compat-badge {
-            position: fixed;
-            top: 20px;
-            right: 20px;
+            display: inline-block;
+            margin: 10px;
             padding: 8px 16px;
             background: #3b82f6;
             color: white;
             border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-            z-index: 1000;
+            font-size: 14px;
+            font-weight: bold;
         }
 
         .container {
             background: white;
-            border-radius: 12px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-            padding: 16px;
-            max-width: 550px;
-            width: 100%;
-            position: relative;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 16px;
+            border-radius: 10px;
+            padding: 15px;
+            max-width: 600px;
+            margin: 0 auto;
         }
 
         .header h1 {
-            font-size: 28px;
+            font-size: 24px;
             color: #22c55e;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
 
         .turn-indicator {
-            font-size: 14px;
-            color: #666666;
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 15px;
         }
 
         .turn-indicator span {
-            padding: 4px 12px;
+            padding: 6px 15px;
             background: #f0e68c;
-            border-radius: 20px;
-            font-weight: 600;
+            border-radius: 15px;
+            font-weight: bold;
             color: #1a1a1a;
         }
 
         .board-container {
             width: 100%;
-            aspect-ratio: 1;
-            margin: 0 auto 16px;
-            border: 3px solid #22c55e;
+            max-width: 480px;
+            margin: 0 auto 15px;
+            border: 4px solid #22c55e;
             border-radius: 8px;
-            overflow: hidden;
-            position: relative;
         }
 
-        .board {
-            display: grid;
-            grid-template-columns: repeat(8, 1fr);
-            grid-template-rows: repeat(8, 1fr);
+        table {
             width: 100%;
-            height: 100%;
+            border-collapse: collapse;
+            table-layout: fixed;
         }
 
-        .square {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 40px;
+        td {
+            width: 12.5%;
+            height: 60px;
+            text-align: center;
+            vertical-align: middle;
+            font-size: 48px;
             cursor: pointer;
-            user-select: none;
+            line-height: 60px;
         }
 
-        .square.light {
+        .light {
             background: #f0d9b5;
         }
 
-        .square.dark {
+        .dark {
             background: #b58863;
         }
 
-        .square.selected {
+        .selected {
             box-shadow: inset 0 0 0 4px #ff6b6b;
         }
 
-        .square.valid-move {
-            box-shadow: inset 0 0 0 3px rgba(34, 197, 94, 0.7);
-        }
-
-        .square:hover {
-            opacity: 0.85;
-        }
-
-        .square.black-piece {
-            transform: rotate(180deg);
+        .valid-move {
+            box-shadow: inset 0 0 0 3px #22c55e;
         }
 
         .status {
             text-align: center;
-            margin-top: 12px;
-            padding: 10px;
+            margin: 15px 0;
+            padding: 12px;
             background: #f8f9fa;
             border-radius: 6px;
-            font-size: 14px;
+            font-size: 16px;
             color: #1a1a1a;
+            font-weight: bold;
         }
 
         .controls {
-            display: flex;
-            gap: 12px;
-            margin-top: 16px;
+            display: block;
+            margin-top: 15px;
         }
 
         .btn {
-            flex: 1;
-            padding: 12px;
+            display: inline-block;
+            width: 45%;
+            margin: 5px 2%;
+            padding: 14px;
             border: none;
             border-radius: 6px;
-            font-size: 14px;
-            font-weight: 600;
+            font-size: 16px;
+            font-weight: bold;
             cursor: pointer;
-            transition: all 0.2s;
         }
 
         .btn-primary {
@@ -185,85 +142,67 @@
             color: white;
         }
 
-        .btn-primary:hover {
-            background: #16a34a;
-        }
-
         .btn-secondary {
             background: #ccc;
             color: #1a1a1a;
         }
 
-        .btn-secondary:hover {
-            background: #b8b8b8;
-        }
-
         .promotion-overlay {
-            position: absolute;
+            display: none;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            display: none;
-            align-items: center;
-            justify-content: center;
-            z-index: 100;
-            border-radius: 8px;
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
         }
 
         .promotion-overlay.show {
-            display: flex;
+            display: block;
         }
 
         .promotion-dialog {
             background: white;
             padding: 20px;
-            border-radius: 12px;
+            border-radius: 10px;
             text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 300px;
         }
 
         .promotion-dialog h3 {
             color: #22c55e;
-            margin-bottom: 16px;
+            margin-bottom: 15px;
+            font-size: 20px;
         }
 
         .promotion-choices {
-            display: flex;
-            gap: 12px;
+            display: block;
+            text-align: center;
         }
 
         .promotion-piece {
+            display: inline-block;
             width: 70px;
             height: 70px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 48px;
+            margin: 5px;
+            font-size: 50px;
             cursor: pointer;
             border: 2px solid #ddd;
             border-radius: 8px;
             background: #f8f9fa;
-        }
-
-        .promotion-piece:hover {
-            background: #f0d9b5;
-            border-color: #22c55e;
-        }
-
-        @media (max-width: 480px) {
-            body { padding: 8px; }
-            .container { padding: 12px; }
-            .header h1 { font-size: 22px; }
-            .square { font-size: 28px; }
-            .back-button { top: 10px; left: 10px; padding: 8px 16px; font-size: 12px; }
-            .compat-badge { top: 10px; right: 10px; font-size: 10px; padding: 6px 12px; }
+            line-height: 70px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <a href="over_the_board.html" class="back-button">← Normal Mode</a>
-    <div class="compat-badge">Kindle Compatible</div>
+    <span class="compat-badge">Kindle Optimized</span>
 
     <div class="container">
         <div class="header">
@@ -274,14 +213,7 @@
         </div>
 
         <div class="board-container">
-            <div class="board" id="board"></div>
-
-            <div class="promotion-overlay" id="promotionOverlay">
-                <div class="promotion-dialog">
-                    <h3>Choose Promotion</h3>
-                    <div class="promotion-choices" id="promotionChoices"></div>
-                </div>
-            </div>
+            <table id="board"></table>
         </div>
 
         <div class="status" id="status">Make your move</div>
@@ -292,11 +224,17 @@
         </div>
     </div>
 
+    <div class="promotion-overlay" id="promotionOverlay">
+        <div class="promotion-dialog">
+            <h3>Choose Promotion</h3>
+            <div class="promotion-choices" id="promotionChoices"></div>
+        </div>
+    </div>
+
     <!-- Load chess.js via traditional script tag (Kindle compatible) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
 
     <script>
-        // Use traditional Chess() constructor (no ES6 import)
         var game = new Chess();
         var selectedSquare = null;
         var validMoves = [];
@@ -313,26 +251,25 @@
             var position = game.board();
 
             for (var row = 0; row < 8; row++) {
+                var tr = document.createElement('tr');
                 for (var col = 0; col < 8; col++) {
                     var square = String.fromCharCode(97 + col) + (8 - row);
                     var piece = position[row][col];
-                    var squareEl = document.createElement('div');
-                    squareEl.className = 'square ' + ((row + col) % 2 === 0 ? 'light' : 'dark');
-                    squareEl.dataset.square = square;
+                    var td = document.createElement('td');
+                    td.className = (row + col) % 2 === 0 ? 'light' : 'dark';
+                    td.setAttribute('data-square', square);
 
                     if (piece) {
-                        squareEl.textContent = pieces[piece.color + piece.type];
-                        if (piece.color === 'b') {
-                            squareEl.classList.add('black-piece');
-                        }
+                        td.textContent = pieces[piece.color + piece.type];
                     }
 
-                    squareEl.addEventListener('click', (function(sq) {
+                    td.onclick = (function(sq) {
                         return function() { handleSquareClick(sq); };
-                    })(square));
+                    })(square);
 
-                    board.appendChild(squareEl);
+                    tr.appendChild(td);
                 }
+                board.appendChild(tr);
             }
             updateStatus();
         }
@@ -389,9 +326,9 @@
                 var pieceBtn = document.createElement('div');
                 pieceBtn.className = 'promotion-piece';
                 pieceBtn.textContent = pieces[color + pieceType];
-                pieceBtn.addEventListener('click', (function(pt) {
+                pieceBtn.onclick = (function(pt) {
                     return function() { executePromotion(pt); };
-                })(pieceType));
+                })(pieceType);
                 choices.appendChild(pieceBtn);
             }
             overlay.classList.add('show');
@@ -419,23 +356,23 @@
         function clearSelection() {
             selectedSquare = null;
             validMoves = [];
-            var squares = document.querySelectorAll('.square');
-            for (var i = 0; i < squares.length; i++) {
-                squares[i].classList.remove('selected', 'valid-move');
+            var cells = document.getElementsByTagName('td');
+            for (var i = 0; i < cells.length; i++) {
+                cells[i].classList.remove('selected', 'valid-move');
             }
         }
 
         function highlightSquares() {
-            var squares = document.querySelectorAll('.square');
-            for (var i = 0; i < squares.length; i++) {
-                var sq = squares[i];
-                sq.classList.remove('selected', 'valid-move');
-                if (sq.dataset.square === selectedSquare) {
-                    sq.classList.add('selected');
+            var cells = document.getElementsByTagName('td');
+            for (var i = 0; i < cells.length; i++) {
+                var cell = cells[i];
+                cell.classList.remove('selected', 'valid-move');
+                if (cell.getAttribute('data-square') === selectedSquare) {
+                    cell.classList.add('selected');
                 }
                 for (var j = 0; j < validMoves.length; j++) {
-                    if (validMoves[j].to === sq.dataset.square) {
-                        sq.classList.add('valid-move');
+                    if (validMoves[j].to === cell.getAttribute('data-square')) {
+                        cell.classList.add('valid-move');
                     }
                 }
             }
@@ -461,15 +398,15 @@
             document.getElementById('status').textContent = status;
         }
 
-        document.getElementById('newGame').addEventListener('click', function() {
+        document.getElementById('newGame').onclick = function() {
             game = new Chess();
             clearSelection();
             hidePromotionDialog();
             pendingPromotion = null;
             renderBoard();
-        });
+        };
 
-        document.getElementById('undoBtn').addEventListener('click', function() {
+        document.getElementById('undoBtn').onclick = function() {
             if (game.history().length === 0) {
                 document.getElementById('status').textContent = 'No moves to undo!';
                 return;
@@ -479,7 +416,7 @@
             hidePromotionDialog();
             pendingPromotion = null;
             renderBoard();
-        });
+        };
 
         renderBoard();
     </script>
