--- a/over_the_board_kindle.html
+++ b/over_the_board_kindle.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micro Chess | Kindle Mode</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: Arial, sans-serif;
@@ -49,7 +45,7 @@
             margin: 0 auto;
         }
 
-        .header h1 {
+        h1 {
             font-size: 24px;
             color: #22c55e;
             margin-bottom: 10px;
@@ -90,29 +86,20 @@
             vertical-align: middle;
             font-size: 48px;
             cursor: pointer;
-            line-height: 60px;
         }
 
-        .light {
-            background: #f0d9b5;
-        }
+        .light { background: #f0d9b5; }
+        .dark { background: #b58863; }
+        .selected { box-shadow: inset 0 0 0 4px #ff6b6b; }
+        .valid-move { box-shadow: inset 0 0 0 3px #22c55e; }
 
-        .dark {
-            background: #b58863;
-        }
-
-        .selected {
-            box-shadow: inset 0 0 0 4px #ff6b6b;
-        }
-
-        .valid-move {
-            box-shadow: inset 0 0 0 3px #22c55e;
-        }
-
-        /* Black piece rotation for realistic board */
         .black-piece {
-            transform: rotate(180deg);
             display: inline-block;
+            -webkit-transform: rotate(180deg);
+            -moz-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+            -o-transform: rotate(180deg);
+            transform: rotate(180deg);
         }
 
         .status {
@@ -124,11 +111,6 @@
             font-size: 16px;
             color: #1a1a1a;
             font-weight: bold;
-        }
-
-        .controls {
-            display: block;
-            margin-top: 15px;
         }
 
         .btn {
@@ -143,15 +125,8 @@
             cursor: pointer;
         }
 
-        .btn-primary {
-            background: #22c55e;
-            color: white;
-        }
-
-        .btn-secondary {
-            background: #ccc;
-            color: #1a1a1a;
-        }
+        .btn-primary { background: #22c55e; color: white; }
+        .btn-secondary { background: #ccc; color: #1a1a1a; }
 
         .promotion-overlay {
             display: none;
@@ -164,9 +139,7 @@
             z-index: 1000;
         }
 
-        .promotion-overlay.show {
-            display: block;
-        }
+        .promotion-overlay.show { display: block; }
 
         .promotion-dialog {
             background: white;
@@ -176,6 +149,10 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
             min-width: 300px;
         }
@@ -184,11 +161,6 @@
             color: #22c55e;
             margin-bottom: 15px;
             font-size: 20px;
-        }
-
-        .promotion-choices {
-            display: block;
-            text-align: center;
         }
 
         .promotion-piece {
@@ -202,7 +174,6 @@
             border-radius: 8px;
             background: #f8f9fa;
             line-height: 70px;
-            text-align: center;
         }
     </style>
 </head>
@@ -211,11 +182,9 @@
     <span class="compat-badge">Kindle Compatible</span>
 
     <div class="container">
-        <div class="header">
-            <h1>♟ Over The Board ♟</h1>
-            <div class="turn-indicator">
-                Current Turn: <span id="turnDisplay">White</span>
-            </div>
+        <h1>♟ Over The Board ♟</h1>
+        <div class="turn-indicator">
+            Current Turn: <span id="turnDisplay">White</span>
         </div>
 
         <div class="board-container">
@@ -224,7 +193,7 @@
 
         <div class="status" id="status">Make your move</div>
 
-        <div class="controls">
+        <div>
             <button class="btn btn-primary" id="newGame">New Game</button>
             <button class="btn btn-secondary" id="undoBtn">Undo Move</button>
         </div>
@@ -233,13 +202,11 @@
     <div class="promotion-overlay" id="promotionOverlay">
         <div class="promotion-dialog">
             <h3>Choose Promotion</h3>
-            <div class="promotion-choices" id="promotionChoices"></div>
+            <div id="promotionChoices"></div>
         </div>
     </div>
 
-    <!-- Load chess.js via traditional script tag (Kindle compatible) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-
     <script>
         var game = new Chess();
         var selectedSquare = null;
@@ -266,11 +233,12 @@
                     td.setAttribute('data-square', square);
 
                     if (piece) {
-                        td.textContent = pieces[piece.color + piece.type];
-                        // Rotate black pieces 180 degrees for realistic board
+                        var span = document.createElement('span');
+                        span.textContent = pieces[piece.color + piece.type];
                         if (piece.color === 'b') {
-                            td.classList.add('black-piece');
+                            span.className = 'black-piece';
                         }
+                        td.appendChild(span);
                     }
 
                     td.onclick = (function(sq) {
