--- a/over_the_board_kindle.html
+++ b/over_the_board_kindle.html
@@ -1,311 +1,257 @@
 <!DOCTYPE html>
+<!-- Define the document type as HTML5 standard -->
 <html lang="en">
+<!-- Start of the HTML document with English language setting -->
+
 <head>
+    <!-- Start of the head section containing meta data and styles -->
     <meta charset="UTF-8">
+    <!-- Character encoding set to UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Viewport settings for responsive mobile rendering -->
     <title>Micro Chess | Kindle Mode</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        body {
-            font-family: Arial, sans-serif;
-            background: #22c55e;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .back-button {
-            display: inline-block;
-            margin: 10px;
-            padding: 12px 24px;
-            background: white;
-            color: #22c55e;
-            text-decoration: none;
-            border-radius: 6px;
-            font-weight: bold;
-            font-size: 16px;
-        }
-
-        .compat-badge {
-            display: inline-block;
-            margin: 10px;
-            padding: 8px 16px;
-            background: #3b82f6;
-            color: white;
-            border-radius: 20px;
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .container {
-            background: white;
-            border-radius: 10px;
-            padding: 15px;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        h1 {
-            font-size: 24px;
-            color: #22c55e;
-            margin-bottom: 10px;
-        }
-
-        .turn-indicator {
-            font-size: 16px;
-            color: #666;
-            margin-bottom: 15px;
-        }
-
-        .turn-indicator span {
-            padding: 6px 15px;
-            background: #f0e68c;
-            border-radius: 15px;
-            font-weight: bold;
-            color: #1a1a1a;
-        }
-
-        .board-container {
-            width: 100%;
-            max-width: 480px;
-            margin: 0 auto 15px;
-            border: 4px solid #22c55e;
-            border-radius: 8px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            table-layout: fixed;
-        }
-
-        td {
-            width: 12.5%;
-            height: 60px;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 48px;
-            cursor: pointer;
-        }
-
-        .light { background: #f0d9b5; }
-        .dark { background: #b58863; }
-        .selected { box-shadow: inset 0 0 0 4px #ff6b6b; }
-        .valid-move { box-shadow: inset 0 0 0 3px #22c55e; }
-
-        .black-piece {
-            display: inline-block;
-            -webkit-transform: rotate(180deg);
-            -moz-transform: rotate(180deg);
-            -ms-transform: rotate(180deg);
-            -o-transform: rotate(180deg);
-            transform: rotate(180deg);
-        }
-
-        .status {
-            text-align: center;
-            margin: 15px 0;
-            padding: 12px;
-            background: #f8f9fa;
-            border-radius: 6px;
-            font-size: 16px;
-            color: #1a1a1a;
-            font-weight: bold;
-        }
-
-        .btn {
-            display: inline-block;
-            width: 45%;
-            margin: 5px 2%;
-            padding: 14px;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .btn-primary { background: #22c55e; color: white; }
-        .btn-secondary { background: #ccc; color: #1a1a1a; }
-
-        .promotion-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            z-index: 1000;
-        }
-
-        .promotion-overlay.show { display: block; }
-
-        .promotion-dialog {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            -moz-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            -o-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-            min-width: 300px;
-        }
-
-        .promotion-dialog h3 {
-            color: #22c55e;
-            margin-bottom: 15px;
-            font-size: 20px;
-        }
-
-        .promotion-piece {
-            display: inline-block;
-            width: 70px;
-            height: 70px;
-            margin: 5px;
-            font-size: 50px;
-            cursor: pointer;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            background: #f8f9fa;
-            line-height: 70px;
-        }
-    </style>
+    <!-- Page title displayed in browser tab -->
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>♟️</text></svg>">
+    <!-- Add favicon for browser tabs -->
+    <link rel="stylesheet" href="style_kindle.css">
 </head>
+
 <body>
+    <!-- Start of body content -->
+
     <a href="over_the_board.html" class="back-button">← Normal Mode</a>
+    <!-- Link back to standard mode -->
     <span class="compat-badge">Kindle Compatible</span>
+    <!-- Visual indicator of current mode -->
 
     <div class="container">
+        <!-- Main content wrapper -->
         <h1>♟ Over The Board ♟</h1>
+        <!-- Title -->
         <div class="turn-indicator">
+            <!-- Turn indicator -->
             Current Turn: <span id="turnDisplay">White</span>
         </div>
 
         <div class="board-container">
+            <!-- Board wrapper -->
             <table id="board"></table>
+            <!-- HTML Table used for board (better for older browsers/Kindle experimental browser) -->
         </div>
 
         <div class="status" id="status">Make your move</div>
+        <!-- Status text -->
 
         <div>
+            <!-- Controls area -->
             <button class="btn btn-primary" id="newGame">New Game</button>
+            <!-- New game button -->
             <button class="btn btn-secondary" id="undoBtn">Undo Move</button>
+            <!-- Undo button -->
         </div>
     </div>
 
     <div class="promotion-overlay" id="promotionOverlay">
+        <!-- Promotion modal overlay -->
         <div class="promotion-dialog">
+            <!-- Promotion dialog box -->
             <h3>Choose Promotion</h3>
+            <!-- Title -->
             <div id="promotionChoices"></div>
+            <!-- Container for choices -->
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+    <!-- Use older version of chess.js for broader compatibility if needed, or just stability -->
     <script>
+        // Start of script
         var game = new Chess();
+        // Initialize game
         var selectedSquare = null;
+        // Track selection
         var validMoves = [];
+        // Track valid moves
         var pendingPromotion = null;
+        // Track promotion state
 
+        // Map piece codes to SVG URLs (Wikimedia Commons)
         var pieces = {
-            'wp': '♙', 'wn': '♘', 'wb': '♗', 'wr': '♖', 'wq': '♕', 'wk': '♔',
-            'bp': '♟', 'bn': '♞', 'bb': '♝', 'br': '♜', 'bq': '♛', 'bk': '♚'
+            'wp': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg',
+            'wn': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+            'wb': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+            'wr': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+            'wq': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+            'wk': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+            'bp': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+            'bn': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+            'bb': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+            'br': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+            'bq': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+            'bk': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg'
         };
 
         function renderBoard() {
+            // Function to render the board
             var board = document.getElementById('board');
+            // Get board table
             board.innerHTML = '';
+            // Clear current board
             var position = game.board();
+            // Get board state
 
             for (var row = 0; row < 8; row++) {
+                // Loop rows
                 var tr = document.createElement('tr');
+                // Create table row
                 for (var col = 0; col < 8; col++) {
+                    // Loop columns
                     var square = String.fromCharCode(97 + col) + (8 - row);
+                    // Calculate algebraic notation
                     var piece = position[row][col];
+                    // Get piece data
                     var td = document.createElement('td');
+                    // Create table cell
                     td.className = (row + col) % 2 === 0 ? 'light' : 'dark';
+                    // Set color class
                     td.setAttribute('data-square', square);
+                    // Store square ID
 
                     if (piece) {
-                        var span = document.createElement('span');
-                        span.textContent = pieces[piece.color + piece.type];
+                        // If piece exists
+                        var img = document.createElement('img');
+                        // Create image tag
+                        // Set source
                         if (piece.color === 'b') {
-                            span.className = 'black-piece';
+                            // Use WHITE piece image for consistency, but inverted/rotated
+                            img.src = pieces['w' + piece.type];
+                            img.className = 'black-piece';
+                            // Inline styles for maximum compatibility
+                            img.style.transform = 'rotate(180deg)';
+                            img.style.webkitTransform = 'rotate(180deg)';
+                            img.style.filter = 'invert(100%)';
+                            img.style.webkitFilter = 'invert(100%)';
+                        } else {
+                            img.src = pieces[piece.color + piece.type];
                         }
-                        td.appendChild(span);
+                        td.appendChild(img);
+                        // Add to cell
                     }
 
-                    td.onclick = (function(sq) {
-                        return function() { handleSquareClick(sq); };
+                    // Assign onclick handler (closure to capture 'square' variable)
+                    td.onclick = (function (sq) {
+                        return function () { handleSquareClick(sq); };
                     })(square);
 
                     tr.appendChild(td);
+                    // Add cell to row
                 }
                 board.appendChild(tr);
+                // Add row to board
+                // Add row to board
             }
+
+            // Highlight King if in check
+            if (game.in_check()) {
+                var turn = game.turn();
+                var boardState = game.board();
+                for (var r = 0; r < 8; r++) {
+                    for (var c = 0; c < 8; c++) {
+                        var p = boardState[r][c];
+                        if (p && p.type === 'k' && p.color === turn) {
+                            var sq = String.fromCharCode(97 + c) + (8 - r);
+                            var cell = document.querySelector('td[data-square="' + sq + '"]');
+                            if (cell) cell.classList.add('check-highlight');
+                        }
+                    }
+                }
+            }
+
             updateStatus();
+            // Update UI text
         }
 
         function handleSquareClick(square) {
+            // Handle clicks
             if (game.game_over()) return;
+            // Ignore if game over
             var clickedPiece = game.get(square);
+            // Get clicked piece info
 
             if (selectedSquare === null) {
+                // If nothing selected
                 if (clickedPiece && clickedPiece.color === game.turn()) {
+                    // If own piece clicked
                     selectedSquare = square;
+                    // Select it
                     validMoves = game.moves({ square: square, verbose: true });
+                    // Get moves
                     highlightSquares();
+                    // Show highlights
                 }
             } else {
+                // If something already selected
                 if (clickedPiece && clickedPiece.color === game.turn()) {
+                    // If clicked another own piece, switch selection
                     selectedSquare = square;
                     validMoves = game.moves({ square: square, verbose: true });
                     highlightSquares();
                 } else if (square === selectedSquare) {
+                    // If clicked same square, deselect
                     clearSelection();
                 } else {
+                    // Attempt move
                     makeMove(selectedSquare, square);
                 }
             }
         }
 
         function makeMove(from, to) {
+            // Execute move
             var piece = game.get(from);
+            // Get moving piece
             var toRank = to[1];
+            // Get destination rank
 
+            // Check promotion
             if (piece && piece.type === 'p' && (toRank === '8' || toRank === '1')) {
                 pendingPromotion = { from: from, to: to };
                 showPromotionDialog(piece.color);
             } else {
+                // Normal move
                 var move = game.move({ from: from, to: to });
                 if (move) {
+                    // If valid
                     clearSelection();
                     renderBoard();
                 } else {
+                    // If invalid
                     clearSelection();
                 }
             }
         }
 
         function showPromotionDialog(color) {
+            // Show promotion modal
             var overlay = document.getElementById('promotionOverlay');
             var choices = document.getElementById('promotionChoices');
             choices.innerHTML = '';
             var promotionPieces = ['q', 'r', 'b', 'n'];
 
+            // Create buttons for choices
             for (var i = 0; i < promotionPieces.length; i++) {
                 var pieceType = promotionPieces[i];
                 var pieceBtn = document.createElement('div');
                 pieceBtn.className = 'promotion-piece';
-                pieceBtn.textContent = pieces[color + pieceType];
-                pieceBtn.onclick = (function(pt) {
-                    return function() { executePromotion(pt); };
+
+                var img = document.createElement('img');
+                img.src = pieces[color + pieceType];
+                pieceBtn.appendChild(img);
+
+                // Click handler
+                pieceBtn.onclick = (function (pt) {
+                    return function () { executePromotion(pt); };
                 })(pieceType);
                 choices.appendChild(pieceBtn);
             }
@@ -313,6 +259,7 @@
         }
 
         function executePromotion(pieceType) {
+            // Finish promotion move
             if (!pendingPromotion) return;
             var move = game.move({
                 from: pendingPromotion.from,
@@ -328,10 +275,12 @@
         }
 
         function hidePromotionDialog() {
+            // Hide modal
             document.getElementById('promotionOverlay').classList.remove('show');
         }
 
         function clearSelection() {
+            // Clear highlighting
             selectedSquare = null;
             validMoves = [];
             var cells = document.getElementsByTagName('td');
@@ -341,6 +290,7 @@
         }
 
         function highlightSquares() {
+            // Apply highlighting
             var cells = document.getElementsByTagName('td');
             for (var i = 0; i < cells.length; i++) {
                 var cell = cells[i];
@@ -357,6 +307,7 @@
         }
 
         function updateStatus() {
+            // Update game status text
             var turn = game.turn() === 'w' ? 'White' : 'Black';
             document.getElementById('turnDisplay').textContent = turn;
             var status = '';
@@ -376,7 +327,8 @@
             document.getElementById('status').textContent = status;
         }
 
-        document.getElementById('newGame').onclick = function() {
+        // New Game handler
+        document.getElementById('newGame').onclick = function () {
             game = new Chess();
             clearSelection();
             hidePromotionDialog();
@@ -384,7 +336,8 @@
             renderBoard();
         };
 
-        document.getElementById('undoBtn').onclick = function() {
+        // Undo handler
+        document.getElementById('undoBtn').onclick = function () {
             if (game.history().length === 0) {
                 document.getElementById('status').textContent = 'No moves to undo!';
                 return;
@@ -396,7 +349,19 @@
             renderBoard();
         };
 
+        // Initial render
         renderBoard();
     </script>
+    <script>
+        // Service Worker Registration with protocol check
+        if ('serviceWorker' in navigator && (window.location.protocol === 'http:' || window.location.protocol === 'https:')) {
+            navigator.serviceWorker.register('sw.js').then(reg => {
+                console.log('ServiceWorker registration successful with scope: ', reg.scope);
+            }).catch(err => {
+                console.warn('ServiceWorker registration failed:', err);
+            });
+        }
+    </script>
 </body>
+
 </html>
