adding legacy mode
This commit introduces a new Legacy Mode to the application by consolidating and refactoring the styles from original prototype HTML files.

Key Changes:
- Extracted and unified inline styles from legacy HTML files into a single Legacy/style.css file.
- Updated legacy pages (index, about, OTB, Kindle) to link to the new external stylesheet and use scoped body classes.
- Added a 'Legacy Mode' button with a Unicode chess icon (♚) to the main About page.
- Optimized Unicode chess symbol rendering for legacy boards with a specialized font stack (Segoe UI Symbol/DejaVu Sans).
- Included additional improvements for Stockfish Kindle mode (engine selection) and CSS piece rotation cleanups.

--- a/about.html
+++ b/about.html
@@ -126,6 +126,7 @@
 
         <!-- ========== BACK BUTTON ========== -->
         <a href="index.html" class="back-btn">← Back to Home</a>
+        <a href="Legacy/index.html" class="back-btn" style="background: #4b5563;">♚ Legacy Mode</a>
 
         <!-- ========== MAIN CONTENT ========== -->
         <div class="content">
